# internal/app/progress/dto.go
@@ -1,19 +1,24 @@
 package progress
 
-type HabitProgressResponse struct {
-	HabitName        string `json:"habit_name" example:"Drink water"`
-	HabitDescription string `json:"habit_description" example:"Drink 2 liters of water every day"`
-}
-
-type Stat struct {
-	TotalExecutions   int `json:"execution_times" example:"2"`
-	MostLongestStreak int `json:"longest_streak" example:"5"`
-	CurrentStreak     int `json:"current_streak" example:"3"`
-	CompletionRate    int `json:"completion_rate" example:"60"`
-	SkippedDays       int `json:"skipped_days" example:"2"`
-	RemainingDays     int `json:"remaining_days" example:"3"`
-}
-
 type AddProgressRequest struct {
 	HabitName string `json:"habit_name" example:"Drink water"`
+}
+
+type GetHabitProgressResponse struct {
+	Goal     Goal     `json:"goal"`
+	Progress Progress `json:"progress"`
+}
+
+type Goal struct {
+	FrequencyType     string `json:"frequency_type"`
+	TimesPerFrequency int    `json:"times_per_frequency"`
+	TotalTrackingDays int    `json:"total_tracking_days"`
+}
+
+type Progress struct {
+	TotalCompletedPeriods int `json:"total_completed_periods"`
+	TotalSkippedPeriods   int `json:"total_skipped_periods"`
+	TotalCompletedTimes   int `json:"total_completed_times"`
+	MostLongestStreak     int `json:"most_longest_streak"`
+	CurrentStreak         int `json:"current_streak"`
 }
