# internal/app/progress/handler.go
@@ -14,14 +14,15 @@ type Handler struct {
 }
 
 type UseCase interface {
-	GetHabitProgress(ctx context.Context, username, habitName string) (entities.Progress, error)
+	GetHabitProgress(ctx context.Context, username, habitName string) (entities.ProgressWithGoal, error)
 	AddHabitProgress(ctx context.Context, username, habitName string) error
 }
 
 func NewProgressHandler(r *gin.RouterGroup, uc UseCase) {
 	h := Handler{uc: uc}
 
-	r.POST("/habits/:habitName/progress", h.AddProgress)
+	r.POST("/progress/:habitName", h.AddProgress)
+	r.GET("/progress/:habitName", h.GetHabitProgress)
 }
 
 // AddProgress godoc
@@ -36,7 +37,7 @@ func NewProgressHandler(r *gin.RouterGroup, uc UseCase) {
 // @Success 200 {string} ok
 // @Failure 400 {string} string "Bad Request"
 // @Failure 500 {string} string "Internal Server Error"
-// @Router /tracker/habits/{habitName}/progress [post]
+// @Router /tracker/progress/{habitName} [post]
 func (h *Handler) AddProgress(c *gin.Context) {
 	username, err := token.ExtractUsernameFromToken(c)
 	if err != nil {
@@ -56,7 +57,20 @@ func (h *Handler) AddProgress(c *gin.Context) {
 	}
 }
 
-func (h *Handler) HabitProgress(c *gin.Context) {
+// GetHabitProgress godoc
+// @Summary get progress endpoint
+// @Schemes
+// @Description Get progress of the habit
+// @Tags example
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Bearer"
+// @Param habitName path string true "Habit name"
+// @Success 200 {string} ok
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /tracker/progress/{habitName} [get]
+func (h *Handler) GetHabitProgress(c *gin.Context) {
 	username, err := token.ExtractUsernameFromToken(c)
 	if err != nil {
 		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
@@ -68,9 +82,11 @@ func (h *Handler) HabitProgress(c *gin.Context) {
 		return
 	}
 
-	_, err = h.uc.GetHabitProgress(c, username, habitName)
+	progressWithGoal, err := h.uc.GetHabitProgress(c, username, habitName)
 	if err != nil {
-
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
 	}
 
+	c.JSON(http.StatusOK, toHabitProgressResponse(progressWithGoal))
 }
